--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
 
 </p>
       <hr>
-      <h3>Current Project</h3>
-      <p>I'm currently working on the webpage that you're looking at. Here is a link to it.</p>
+      <h3>Latest Project</h3>
+      <p>My latest project was this webpage that you're looking at. Here is a link to it.</p>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
