--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
 </p>
       <hr>
       <h3>Latest Project</h3>
-      <p>My latest project was this webpage that you're looking at. Here is a link to it.</p>
+      <p>My latest project was the 3-D simulation of the great northern hemisphere.</p>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
