--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
 </p>
       <hr>
       <h3>Latest Project</h3>
+      <img src="const1.png" alt="conts1" width="300" height="300" align="left">
       <p>My latest project was the 3-D simulation of the great northern hemisphere.</p>
     </div>
     <div class="col-sm-2 sidenav">
