--- a/index 2.0.html
+++ b/index 2.0.html
@@ -7,7 +7,7 @@
   
   
   
-      <link rel="stylesheet" href="css 2.0">
+      <link rel="stylesheet" href="style2.0">
 
   
 </head>
@@ -145,7 +145,7 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
   
   
 
-    <script  src="js 2.0"></script>
+    <script  src="js2.0"></script>
 
 
 
