--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
       <ul id="slides">
 	<li class="slide">
     <img src =
-         "coding_school_logo_pic.png">
+         "coding_school_logo_pic.PNG">
 	<li class="slide">
     <img src =
-         "constellation_pic.png">
+         "constellation_pic.PNG">
 	<li class="slide">
     <img src =
-         "spiral_rainbow_pic.png">
+         "spiral_rainbow_pic.PNG">
 	<li class="slide">
     <img src =
-         "coupon_project_pic.png">
+         "coupon_project_pic.PNG">
 	<li class="slide">
     <img src =
-         "eight_ball_pic.png">
+         "eight_ball_pic.PNG">
 </ul>
 <!--slide show code end-->
     </div>
