--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
       <ul id="slides">
 	<li class="slide">
     <img src =
-         "coding_school_logo_pic.PNG">
+         "Skd10.github.io/coding_school_logo_pic.PNGskd">
 	<li class="slide">
     <img src =
-         "constellation_pic.PNG">
+         "Skd10.github.io/constellation_pic.PNG">
 	<li class="slide">
     <img src =
-         "spiral_rainbow_pic.PNG">
+         "Skd10.github.io/spiral_rainbow_pic.PNG">
 	<li class="slide">
     <img src =
-         "coupon_project_pic.PNG">
+         "Skd10.github.io/coupon_project_pic.PNG">
 	<li class="slide">
     <img src =
-         "eight_ball_pic.PNG">
+         "Skd10.github.io/eight_ball_pic.PNG">
 </ul>
 <!--slide show code end-->
     </div>
