--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
       <!--slide show code here-->
       <ul id="slides">
 	<li class="slide">
-    <img src = "Skd10.github.io/coding_school_logo_pic.PNG" height="300" width-"300">
+    <img src = "Skd10.github.io/coding_school_logo_pic.PNG" height="300" width="300">
 	<li class="slide">
-    <img src = "Skd10.github.io/constellation_pic.PNG" height="300" width-"300">
+    <img src = "Skd10.github.io/constellation_pic.PNG" height="300" width="300">
 	<li class="slide">
-    <img src = "Skd10.github.io/spiral_rainbow_pic.PNG" height="300" width-"300">
+    <img src = "Skd10.github.io/spiral_rainbow_pic.PNG" height="300" width="300">
 	<li class="slide">
-    <img src = "Skd10.github.io/coupon_project_pic.PNG" height="300" width-"300">
+    <img src = "Skd10.github.io/coupon_project_pic.PNG" height="300" width=300">
 	<li class="slide">
-    <img src = "Skd10.github.io/eight_ball_pic.PNG" height="300" width-"300">
+    <img src = "Skd10.github.io/eight_ball_pic.PNG" height="300" width="300">
 </ul>
 <!--slide show code end-->
     </div>
