--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ In HTML, CSS, and Java Script I have been working on my first project... This we
 	<li class="slide">
     <img src = "Skd10.github.io/spiral_rainbow_pic.PNG" height="300" width="300">
 	<li class="slide">
-    <img src = "Skd10.github.io/coupon_project_pic.PNG" height="300" width=300">
+    <img src = "Skd10.github.io/coupon_project_pic.PNG" height="300" width="300">
 	<li class="slide">
     <img src = "Skd10.github.io/eight_ball_pic.PNG" height="300" width="300">
 </ul>
