--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  sean</title>
+  <title>Sean's Website</title>
   
   
   
@@ -57,29 +57,30 @@
     </div>
     <div class="col-sm-8 text-left"> 
       <h1>Welcome</h1>
-      <p>Hello, my name is Sean. I am 12 years old and I've been working with my coding coach, Acelia, in python. We just recently moved to processing with python, HTML, CSS, and Java Script.
+      <p>Hello, my name is Sean. I am 14 years old and I've been working with my coding coach, Kyle, in python. We are perfecting my skills in python by doing basic projects.
 
-Processing is a programming language that allows you to create 3-D as well as 2-D graphics. I've been working in processing for about three months.
-My main program in processing is a 3-D simulation of the great northern hemisphere. The constellations are 2-D graphics on a 3-D plain.
+Python is a programming language used commonly with many coders. I worked with python for about four years and moved to HTML, Java Script, and CSS for a year.
+I recently moved back to python because it can be used for developing software and the other languages I learned help with making websites like this.
+The project I am most proud of is my constellation project which took me multiple months to finish and is a three-dimensional projection of the Northern Hemisphere.
 
-In HTML, CSS, and Java Script I have been working on my first project... This webpage. This project is supposed to be a link to all of my projects and a little bit about myself. After this project, I hope to accomplish many more and develop my skills as a coder.
+I hope to continue developing my programming skills and improving myself overall.
 
 </p>
       <hr>
       <h3>Current Project</h3>
-      <p>I'm currently working on the webpage that you're looking at. Here is a link to it.</p>
+      <p>I'm currently working on a Tic-Tac-Toe game. It is helping me perfect my skills and continue advancing them.</p>
       <!--slide show code here-->
       <ul id="slides">
 	<li class="slide">
-    <img src = "Skd10.github.io/coding_school_logo_pic.PNG" height="300" width="300">
+    <img src = "coding_school_logo_pic.PNG" height="200" width="500" class="slide_img center">
 	<li class="slide">
-    <img src = "Skd10.github.io/constellation_pic.PNG" height="300" width="300">
+    <img src = "constellation_pic.PNG" height="200" width="500" class="slide_img center">
 	<li class="slide">
-    <img src = "Skd10.github.io/spiral_rainbow_pic.PNG" height="300" width="300">
+    <img src = "spiral_rainbow_pic.PNG" height="200" width="500" class="slide_img center">
 	<li class="slide">
-    <img src = "Skd10.github.io/coupon_project_pic.PNG" height="300" width="300">
+    <img src = "coupon_project_pic.PNG" height="200" width="500" class="slide_img center">
 	<li class="slide">
-    <img src = "Skd10.github.io/eight_ball_pic.PNG" height="300" width="300">
+    <img src = "eight_ball_pic.PNG" height="200" width="500" class="slide_img center">
 </ul>
 <!--slide show code end-->
     </div>
